fix some bug for crNotif and discount code